# tg_content_factory

./: .env.example  .gitignore  CLAUDE.md  README.md  README.ru.md  RELEASE_NOTES.md  config.yaml  pyproject.toml
.github/: release.yml
.github/workflows/: ci.yml
docs/: PRE_DEPLOY_AUDIT.md
pytest-of-axisrow/: pytest-current
pytest-of-axisrow/pytest-3/: test_get_my_dialogs_enriches_acurrent  test_my_telegram_page_renderscurrent  test_my_telegram_page_requirescurrent  test_my_telegram_page_shows_dicurrent
pytest-of-axisrow/pytest-4/: test_account_premium_fieldcurrent  test_account_session_encryptedcurrent  test_account_upsert_reactivatecurrent  test_account_upsert_updates_prcurrent  test_account_upsertcurrent  test_add_and_get_accountscurrent  test_add_and_get_channelscurrent  test_add_bulkcurrent  test_add_channel_redirect_has_current  test_add_channel_resolve_failcurrent  test_add_channel_with_channel_current  test_add_plain_keywordcurrent  test_add_regex_keywordcurrent  test_add_scam_channel_is_inactcurrent  (+263 more)
reports/: generate_reports.py  moto_rental_chart.html  moto_rental_messages.xlsx
src/: collection_queue.py  config.py  main.py  models.py
tasks/: motobike_rental_search.md
tests/: helpers.py  test_auth.py  test_bundles.py  test_channel_stats.py  test_cli.py  test_client_pool.py  test_collector.py  test_config.py  test_database.py  test_filters.py  test_import_web.py  test_integration.py  test_my_telegram.py  test_notification.py  test_search.py  test_search_queries.py  test_session_cipher.py  test_stats_task_dispatcher.py  test_web.py
(+95 files in other folders)
