[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-user-search"
version = "0.1.6"
description = "Telegram Post Search & Monitoring"
requires-python = ">=3.11"
dependencies = [
    "telethon==1.42.0",
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
    "jinja2==3.1.6",
    "aiosqlite==0.22.1",
    "apscheduler==3.11.2",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "pyyaml==6.0.3",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.22",
    "cryptography==46.0.5",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
ai = ["deepagents==0.3.6"]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-timeout==2.4.0",
    "httpx==0.28.1",
    "ruff==0.14.13",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 30
